<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/f_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_micro4"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy"
                android:textColor="@color/app_text_color_dark"
                android:textSize="@dimen/font_size_xlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_privacy_policy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_one"
                android:textColor="@color/app_text_color_dark" />

            <TextView
                android:id="@+id/f_privacy_policy_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_two"
                android:textColor="@color/app_text_color_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_privacy_policy_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_three"
                android:textColor="@color/app_text_color_dark" />

            <TextView
                android:id="@+id/f_privacy_policy_security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_four"
                android:textColor="@color/app_text_color_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_privacy_policy_security_dic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_five"
                android:textColor="@color/app_text_color_dark" />

            <TextView
                android:id="@+id/f_privacy_policy_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_six"
                android:textColor="@color/app_text_color_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_privacy_policy_contact_us_dic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_seven"
                android:textColor="@color/app_text_color_dark" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>