<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/f_about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_micro4"
                android:scrollbars="vertical"
                android:text="@string/a_policy_about_app"
                android:textColor="@color/app_text_color_dark"
                android:textSize="@dimen/font_size_xlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_about_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/about_one"
                android:gravity="center"
                android:textColor="@color/app_text_color_dark" />

            <TextView
                android:id="@+id/f_about_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/about_two"
                android:textColor="@color/app_text_color_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/f_about_dis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/about_three"
                android:textColor="@color/app_text_color_dark" />

            <TextView
                android:id="@+id/f_about_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/drw_privacy_policy_rounded"
                android:padding="@dimen/padding_medium"
                android:scrollbars="vertical"
                android:text="@string/a_privacy_policy_seven"
                android:textColor="@color/app_text_color_dark" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>