<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_large"
    tools:context=".TextConvertResultActivity">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_text_convert_result"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/a_text_convert_result_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/result_textView"
        android:layout_marginTop="@dimen/margin_medium"
        android:scrollbars="vertical"
        android:padding="@dimen/padding_small"
        android:textIsSelectable="true"
        android:textSize="@dimen/font_size_medium2"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/app_text_color_dark"
        android:background="@drawable/draw_text_result_rounded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/a_text_convert_btn_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_micro4"
            android:layout_weight="1"
            android:padding="@dimen/padding_small2"
            android:text="@string/a_text_convert_result_copy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/a_text_convert_btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_micro4"
            android:layout_weight="1"
            android:padding="@dimen/padding_small2"
            android:text="@string/a_text_convert_result_share" />
    </LinearLayout>

</LinearLayout>